changes for authentication

--- a/story/templates/base_temp.html
+++ b/story/templates/base_temp.html
@@ -38,6 +38,7 @@
 		<li><a href="/">HOME</a></li>
 		<li><a href="/story">BLOG</a></li>
 		<li><a href='/pictures/'>PICTURES</a></li>
+        <li><a href="/login/">Login</a> </li>
 	</ul>
 	{% endblock sidebar %}
 
